# taiko-demo

./: .gitignore  GEVULOT.md  README.md
taiko-tasker/: .env.template  README.md  index.js  package.json
taiko-tasker/results/: result.json
taiko-tasker/witnesses/: witness.json
zkevm-chain/: .gitignore  Cargo.toml  README.md  notes.txt  old-code.rs
zkevm-chain/common/: Cargo.toml
zkevm-chain/common/src/: prover.rs
zkevm-chain/coordinator/: Cargo.toml
zkevm-chain/coordinator/src/: shared_state.rs
zkevm-chain/coordinator/tests/: drop_message.rs
zkevm-chain/dev/: Cargo.toml
zkevm-chain/gevulot/: manifest_mock.json  manifest_prover.json  manifest_verifier.json  proof-bad.json  proof.json  taiko-ops-legacy-prover.json  taiko-ops-mock.json  taiko-ops-offline-prover.json  taiko-ops-prover.json  taiko-ops-verifier-fail.json  taiko-ops-verifier.json  taiko-ops-witness-capture.json  witness-57437.json
zkevm-chain/prover/: Cargo.toml  build.rs
zkevm-chain/prover/src/: circuit_autogen.rs  circuit_witness.rs  circuits.rs  server.rs  shared_state.rs  utils.rs
zkevm-circuits/: Cargo.toml  notes.txt
zkevm-circuits/bus-mapping/: Cargo.toml
zkevm-circuits/bus-mapping/src/: circuit_input_builder.rs  error.rs  exec_trace.rs  lib.rs  operation.rs  precompile.rs  rpc.rs  state_db.rs
zkevm-circuits/bus-mapping/src/circuit_input_builder/: access.rs  block.rs  call.rs  execution.rs  protocol_instance.rs  transaction.rs
zkevm-circuits/bus-mapping/src/evm/opcodes/: begin_end_tx.rs
zkevm-circuits/bus-mapping/src/operation/: container.rs
zkevm-circuits/circuit-benchmarks/: Cargo.toml
zkevm-circuits/circuit-benchmarks/src/: lib.rs  taiko_super_circuit.rs
zkevm-circuits/eth-types/: Cargo.toml
zkevm-circuits/eth-types/src/: evm_types.rs  geth_types.rs  lib.rs
zkevm-circuits/eth-types/src/evm_types/: memory.rs  stack.rs
zkevm-circuits/gadgets/: Cargo.toml
zkevm-circuits/gadgets/src/: util.rs
zkevm-circuits/integration-tests/: Cargo.toml
zkevm-circuits/integration-tests/src/: integration_public_data_circuits.rs
zkevm-circuits/mock/: Cargo.toml
zkevm-circuits/mock/src/: anchor.rs  lib.rs  transaction.rs
zkevm-circuits/testool/: Cargo.toml
zkevm-circuits/zkevm-circuits/: Cargo.toml
zkevm-circuits/zkevm-circuits/src/: anchor_tx_circuit.rs  lib.rs  taiko_pi_circuit.rs  taiko_super_circuit.rs  util.rs  witness.rs
zkevm-circuits/zkevm-circuits/src/anchor_tx_circuit/: sign_verify.rs
zkevm-circuits/zkevm-circuits/src/circuit_tools/: cached_region.rs
zkevm-circuits/zkevm-circuits/src/evm_circuit/: step.rs
zkevm-circuits/zkevm-circuits/src/evm_circuit/execution/: end_tx.rs
zkevm-circuits/zkevm-circuits/src/table/: keccak_table.rs  pi_table.rs
zkevm-circuits/zkevm-circuits/src/taiko_pi_circuit/: dev.rs  param.rs  test.rs
zkevm-circuits/zkevm-circuits/src/taiko_super_circuit/: test.rs
zkevm-circuits/zkevm-circuits/src/witness/: block.rs
