[workspace]
members = ["prover"]

[profile.release]
opt-level = 3
lto = "thin"

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
#halo2_proofs = { path = "../../../taiko-halo2/halo2_proofs" }
halo2_proofs = { git = "https://github.com/taikoxyz/halo2.git", branch = "taiko/unstable" }


