[package]
name = "zkevm_common"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bus-mapping = { path = "../../zkevm-circuits/bus-mapping",  features = [
    "test",
] }
eth-types = { path = "../../zkevm-circuits/eth-types",  features = [
    "warn-unimplemented",
] }
zkevm-circuits = { path = "../../zkevm-circuits/zkevm-circuits"  }
hyper = { version = "0.14.16", features = ["server"] }
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
hex = "0.4.3"
