[package]
name = "prover"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }
bus-mapping = { git = "https://github.com/kylegranger/zkevm-circuits.git", branch = "kyle-dev", features = [
    "test",
    "disable_l2_trace_block"
] }
eth-types = { git = "https://github.com/kylegranger/zkevm-circuits.git", branch = "kyle-dev", features = [
    "warn-unimplemented",
] }
zkevm-circuits = { git = "https://github.com/kylegranger/zkevm-circuits.git", branch = "kyle-dev", features = [
    "test-circuits",
] }
circuit-benchmarks = { git = "https://github.com/kylegranger/zkevm-circuits.git", branch = "kyle-dev", features = [
    "benches",
] }
snark-verifier = { git = "https://github.com/taikoxyz/snark-verifier.git", branch = "a6-integration", default-features = false, features = [
    "loader_halo2",
    "system_halo2",
    "loader_evm",
    "parallel",
] }
snark-verifier-sdk = { git = "https://github.com/taikoxyz/snark-verifier.git", branch = "a6-integration", default-features = false, features = [
    "loader_halo2",
    "loader_evm",
    "parallel",
    "display",
    "halo2_circuit_params",
] }

env_logger = "0.9.0"
ethers-providers = "2.0.0"
ethers-core = "2.0.0"
hyper = { version = "0.14.16", features = ["server"] }
rand_xorshift = "0.3"
log = "0.4.14"
rand = "0.8.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
strum = "0.24"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
zkevm_common = { path = "../common" }
itertools = "0.10.3"
clap = { version = "4.0.14", features = ["derive", "env"] }
hex = "0.4.3"
lazy_static = "1.4"
libc = "0.2.153"
gevulot-shim = { path = "../../gevulot/crates/shim" }
# autogen
mock = { git = "https://github.com/kylegranger/zkevm-circuits.git", branch = "kyle-dev", optional = true }
ethers-signers = { version = "2.0.0", optional = true }
zkevm_dev = { path = "../dev", optional = true }
paste = { version = "1.0.11", optional = true }

[features]
default = []
autogen = ["mock", "ethers-signers", "zkevm_dev", "paste"]
evm-verifier = []
eip-1559-only = []

