[package]
name = "zkevm-circuits"
version = "0.1.0"
authors = ["therealyingtong <yingtong@z.cash>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/taikoxyz/halo2.git", features = ["circuit-params"], branch = "taiko/unstable" }
num = "0.4"
sha3 = "0.10"
array-init = "2.0.0"
bus-mapping = { path = "../bus-mapping" }
eth-types = { path = "../eth-types" }
gadgets = { path = "../gadgets" }
ethers-core = "=2.0.0"
ethers-signers = { version = "=2.0.0", optional = true }
mock = { path = "../mock", optional = true }
strum = "0.24"
strum_macros = "0.24"
rand_xorshift = "0.3"
rand = "0.8"
itertools = "0.10.3"
lazy_static = "1.4"
keccak256 = { path = "../keccak256"}
log = "0.4"
env_logger = "0.9"
ecdsa = { git = "https://github.com/taikoxyz/halo2wrong", branch = "a6-integration" }
ecc =       { git = "https://github.com/taikoxyz/halo2wrong", branch = "a6-integration" }
maingate =  { git = "https://github.com/taikoxyz/halo2wrong", branch = "a6-integration" }
integer =   { git = "https://github.com/taikoxyz/halo2wrong", branch = "a6-integration" }
libsecp256k1 = "0.7"
num-bigint = { version = "0.4" }
rand_chacha = "0.3"
snark-verifier = { git = "https://github.com/taikoxyz/snark-verifier.git", branch = "a6-integration", default-features = false, features = ["loader_halo2", "system_halo2", "loader_evm", "parallel"] }
snark-verifier-sdk = { git = "https://github.com/taikoxyz/snark-verifier.git", branch = "a6-integration", default-features = false, features = ["loader_halo2", "loader_evm", "parallel", "display", "halo2_circuit_params"] }
cli-table = { version = "0.4", optional = true }
once_cell = "1.17.1"

serde = { version = "1.0.130", features = ["derive"] }
alloy-primitives = { version = "0.4", default-features = false, features = [
  "rlp",
  "serde",
  "std",
] }
alloy-sol-types = { version = "0.4", optional = true }
alloy-dyn-abi = { version = "0.4", optional = true }

[dev-dependencies]
bus-mapping = { path = "../bus-mapping", features = ["test"] }
ctor = "0.1.22"
ethers-signers = "=2.0.0"
hex = "0.4.3"
itertools = "0.10.1"
mock = { path = "../mock" }
pretty_assertions = "1.0.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.78"

[features]
default = ["taiko"]
test = ["ethers-signers", "mock", "bus-mapping/test"]
test-circuits = []
warn-unimplemented = ["eth-types/warn-unimplemented"]
stats = ["warn-unimplemented", "dep:cli-table"]
taiko = [
  "dep:alloy-sol-types",
  "dep:alloy-dyn-abi",
]

[[bin]]
name = "stats"
required-features = ["stats"]